--- a/魔导战姬开场主页.html
+++ b/魔导战姬开场主页.html
@@ -40,7 +40,7 @@
         <div class="masthead-rule"></div>
 
         <div class="author-info">
-          作者：emo的lsp · 本页为小说封面与元信息
+          作者：AdmiralX · 发布于类脑社区
         </div>
       </header>
 
@@ -50,19 +50,28 @@
       <section class="content-area">
         <section class="chapter">
           <div class="chapter-title">
-            <div class="left">序言</div>
-            <div class="tag">PROLOGUE</div>
+              <div class="left">大明护国公武穆王本纪</div>
+              <div class="tag">白话记</div>
           </div>
 
           <p class="dropcap">
-            当魔力不再是神祇的恩赐，而成为军备与管制的对象，
-            当少女的身体被视为可计算、可替换、可牺牲的资源，
-            “战姬”这一称谓，便不再意味着荣耀。
+              
           </p>
 
           <p class="muted" style="margin-top: 8px">
-            本书记录的，并非英雄的史诗，
-            而是被时代推上战场之人，在秩序、服从与自我之间的挣扎。
+              自西方列强掌握魔导之术以来，战争的方式彻底改变。
+              胜负不再取决于兵力多寡，也不再依靠城池是否坚固。
+              少数具备特殊天赋的西洋女子，披挂钢铁，操控异能，
+              便足以击溃一支军队，瓦解一片防线。
+              她们被称为“魔导战姬”。
+              这种力量，对于大明来说，既无法防御，也无法仿效。
+              因为它并非来自科技或制度，
+              而是天生而来的人种差异。
+              自那以后，战争的界线不再是勇敢与怯懦、忠诚与背叛，
+              而是是否“具备资格”。
+              而大明，只能以凡人的血肉去面对这种战争。
+              即便有人愿意赴死，也无法弥补这种根本的不对等。
+              也许是天佑华夏，一切的转机要从嘉禾十三年说起......
           </p>
         </section>
 
@@ -71,19 +80,24 @@
              ========================= -->
         <section class="chapter">
           <div class="chapter-title">
-            <div class="left">世界背景</div>
-            <div class="tag">SETTING</div>
+            <div class="left">嘉德国殇摘要</div>
+            <div class="tag">嘉德六十年</div>
           </div>
 
           <p class="dropcap">
-            魔导纪元第七十六年，诸国以“魔导适格率”为核心指标，
-            将适格者集中编入各级战术单位。
-            她们被编号、被记录、被调度，
-            在文件中以“资产”之名存在。
+              1897 年，嘉德六十年。
+              德意志帝国强登胶州湾的消息传到北直隶时，老皇帝大明嘉德帝尚在位。
+              那一年，朝廷内外争论不休，奏折如雪，却已无人能提出真正的应对之策。
+              据起居注所载，压死这位曾经励精图治的明君的最后一根稻草，
+              嘉德帝在震怒与羞惭中病倒，不久便驾崩于内廷。
+              新君即位，改元嘉和。
+              嘉和十三年，西元1910年。这一年，大明仍然存在，
+              却已被迫学会在列强的战姬之间，
+              寻找任何可能的生存缝隙。
           </p>
 
           <p class="muted" style="margin-top: 8px">
-            而你，正站在这一体系的入口。
+            而你，一个来自2026的灵魂，正站在这一救亡图存的十字路口中。
           </p>
         </section>
 
@@ -103,7 +117,6 @@
             </p>
             <p style="margin-top: 6px">
               故事内容将从下一页开始。
-              你可在后续页面选择开场方式、身份与立场。
             </p>
           </div>
         </section>
@@ -126,9 +139,10 @@
               <div class="opening-badge">右滑开场</div>
               <div class="opening-title">魔导战姬与大明少年</div>
               <div class="opening-desc">
-                你收到来自魔导管理局的正式通知，
-                被要求于七日内前往指定设施报到。
-                拒绝，将被视为对国家秩序的挑战。
+                  她眸色冰蓝如誓，
+                  一瞬惊疑，一瞬杀意。
+                  命令落下，铁足临身，
+                  世界自此改轨迹。
               </div>
             </div>
 
@@ -137,12 +151,10 @@
               data-action="switch-opening"
               data-swipe="2"
             >
-              <div class="opening-badge">进阶开场</div>
+              <div class="opening-badge">其他开场</div>
               <div class="opening-title">已编入名册者</div>
               <div class="opening-desc">
-                你并非第一次踏入这片设施。
-                魔导战姬的制服、编号与规则，
-                对你而言早已熟悉。
+                  施工中，敬请期待。
               </div>
             </div>
           </div>
