--- a/魔导战姬开场主页.html
+++ b/魔导战姬开场主页.html
@@ -88,7 +88,9 @@
               1897 年，嘉德六十年。
               德意志帝国强登胶州湾的消息传到北直隶时，老皇帝大明嘉德帝尚在位。
               那一年，朝廷内外争论不休，奏折如雪，却已无人能提出真正的应对之策。
-              据起居注所载，压死这位曾经励精图治的明君的最后一根稻草，
+              据起居注所载，压死这位曾经励精图治的明君的最后一根稻草，自从当时仍然年轻的他，得知虎门外海大明蒸汽铁甲水师的覆灭开始。
+              这位皇帝早已心力交瘁，却仍然抱有一丝幻想，认为大明尚有翻身之日。
+              但是德意志的金发碧眼魔导战姬，携带着铁蹄与火炮，踏上了胶州的土地。
               嘉德帝在震怒与羞惭中病倒，不久便驾崩于内廷。
               新君即位，改元嘉和。
               嘉和十三年，西元1910年。这一年，大明仍然存在，
@@ -111,10 +113,11 @@
           </div>
 
           <div class="notice-box">
-            <p>
-              本页为 <b>小说封面 / 作者说明页</b>，
-              不属于角色扮演中的角色对白。
-            </p>
+              <p>
+                  本页为 <b>小说封面 / 作者说明页</b>，
+                  不属于角色扮演中的角色对白。
+                  欢迎加作者QQ交流群: 170030526
+              </p>
             <p style="margin-top: 6px">
               故事内容将从下一页开始。
             </p>
