Update notice box content in 魔导战姬开场主页.html
Removed redundant text and emphasized the QQ group invitation.

--- a/魔导战姬开场主页.html
+++ b/魔导战姬开场主页.html
@@ -114,9 +114,8 @@
 
           <div class="notice-box">
               <p>
-                  本页为 <b>小说封面 / 作者说明页</b>，
-                  不属于角色扮演中的角色对白。
-                  欢迎加作者QQ交流群: 170030526
+                  <b>欢迎加作者QQ交流群: 170030526</b>
+                   <b>会有人设CG图不定期发布哦，关于角色的更新也会在群里讨论</b>
               </p>
             <p style="margin-top: 6px">
               故事内容将从下一页开始。
