--- a/魔导战姬开场主页.html
+++ b/魔导战姬开场主页.html
@@ -117,6 +117,12 @@
                   <b>欢迎加作者QQ交流群: 170030526</b>
                    <b>会有人设CG图不定期发布哦，关于角色的更新也会在群里讨论</b>
               </p>
+
+              <p>
+                  <b>欢迎加作者DC频道: https://discord.gg/TjmjqGuRwf</b>
+                  <b>频道内会发NSFW角色设定</b>
+              </p>
+
             <p style="margin-top: 6px">
               故事内容将从下一页开始。
             </p>
@@ -133,32 +139,54 @@
           </div>
 
           <div class="opening-grid">
-            <div
-              class="opening-card"
-              data-action="switch-opening"
-              data-swipe="1"
-            >
-              <div class="opening-badge">右滑开场</div>
-              <div class="opening-title">魔导战姬与大明少年</div>
-              <div class="opening-desc">
-                  她眸色冰蓝如誓，
-                  一瞬惊疑，一瞬杀意。
-                  命令落下，铁足临身，
-                  世界自此改轨迹。
+              <div class="opening-card"
+                   data-action="switch-opening"
+                   data-swipe="1">
+                  <div class="opening-badge">开场之壹</div>
+                  <div class="opening-title">普鲁士式开局</div>
+                  <div class="opening-desc">
+                      她眸色冰蓝如誓，
+                      一瞬惊疑，一瞬杀意。
+                      命令落下，铁足临身，
+                      世界自此改轨迹。
+                  </div>
               </div>
-            </div>
 
-            <div
-              class="opening-card"
-              data-action="switch-opening"
-              data-swipe="2"
-            >
-              <div class="opening-badge">其他开场</div>
-              <div class="opening-title">已编入名册者</div>
-              <div class="opening-desc">
-                  施工中，敬请期待。
+              <div class="opening-card"
+                   data-action="switch-opening"
+                   data-swipe="2">
+                  <div class="opening-badge">开场之贰</div>
+                  <div class="opening-title">天佑吾皇</div>
+                  <div class="opening-desc">
+                      且看格物幻境，谁怜赤子孤忠？
+                      从来时势造英雄。
+                      乾坤只一瞬，魂梦入炉中。
+                  </div>
               </div>
-            </div>
+
+              <div class="opening-card"
+                   data-action="switch-opening"
+                   data-swipe="2">
+                  <div class="opening-badge">开场之叁</div>
+                  <div class="opening-title">绝望的突击</div>
+                  <div class="opening-desc">
+                      辽左烽烟，金州血肉，夜风犹带腥咸。
+                      残躯何寄？孤冢对寒蟾。
+                      几处枯杨焦土，听隐隐、地动如雷。
+                      拼死搏，残雷在手，只换泪阑干。
+                  </div>
+              </div>
+
+              <div class="opening-card"
+                   data-action="switch-opening"
+                   data-swipe="2">
+                  <div class="opening-badge">其他开场</div>
+                  <div class="opening-title">已编入名册者</div>
+                  <div class="opening-desc">
+                      施工中，敬请期待。
+                  </div>
+              </div>
+
           </div>
         </section>
 
